<resources>
    <string name="app_name">LimaPassApp</string>

    <string name="hint_login_email">Correo electrónico</string>
    <string name="hint_login_password">Contraseña</string>
    <string name="text_btn_go_signup">¿No tienes cuenta? <u>Regístrate</u></string>
    <string name="text_gforgot_password">Olvidé mi contraseña</string>
    <string name="text_btn_login">Ingresar</string>

    <string name="text_title_signup">¡Crea tu cuenta!</string>
    <string name="hint_signup_dni">Ingresa tu DNI</string>
    <string name="hint_signup_email">Ingresa tu correo</string>
    <string name="hint_signup_password">Ingresa tu contraseña</string>
    <string name="hint_signup_password_confirm">Confirma tu contraseña</string>
    <string name="text_btn_signup">Registrarme</string>

    <string name="text_title_recovery_pass">¿Olvidaste tu contraseña?</string>
    <string name="text_description_recovery_pass">¡No te preocupes! Ingresa tu correo electrónico registrado para enviarte tu contraseña</string>
    <string name="hint_email_recovery_pass">Correo electrónico</string>

    <string name="my_card">Mi tarjeta</string>
    <string name="buses">Buses</string>
    <string name="prices">Tarifas</string>
    <string name="recharge">Recarga tu tarjeta aquí</string>

    <string name="my_information">Mi información</string>
    <string name="name">Nombres</string>
    <string name="lastnames">Apellidos</string>
    <string name="usefull_line">Línea más utilizada</string>

    <string name="welcome">¡Bienvenido!</string>
    <string name="done">Listo</string>
    <string name="recharge_title">Recargar</string>
    
    <string name="title_payment">Procesos de\nmedios de pago</string>
    <string name="ref_payment">Ref. 188543558346</string>
    <string name="card_number_hint">Número de tarjeta</string>
    <string name="card_due_date_hint">mm/aa</string>
    <string name="card_cvv_hint">CVC</string>
    <string name="card_name_hint">Nombre</string>
    <string name="card_lastname_hint">Apellido</string>
    <string name="card_email_hint">Correo</string>
    <string name="card_num_doc_hint">Nro Doc</string>
    <string name="card_done_hint">PROCESAR TRANSACCIÓN</string>
</resources>